--- a/Index.html
+++ b/Index.html
@@ -26,8 +26,24 @@
         Food the<br>
         Most precious thing<br>
     </p>
-    <p class="text3"><a href="#">Today's Menu</a></p>
+    <p class="botton"><a href="#">Today's Menu</a></p>
     <p class="imagen1"><img src="images/home.png"></p>
+</div>
+
+<div class="conteiner2">
+  <p class="text1-2">About Us </p>
+  <p class="text2-2">
+    We speak the good <br>
+    food language
+  </p>
+  <p class="text3-2">
+    It is a long established fact that a <br>
+    be distracted by the readable content <br>
+    looking at its layout. The point of
+  </p>
+  <p class="botton2"><a href="#">Learn More</a></p>
+  <p class="imagen2"><img src="images/about.png"></p>
+
 </div>
 </body>
 </html>
