--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,8 @@
     <li class="nav-link"><a href="#">Conact</a></li>
   </ul>
 </nav>
+
+
 <div class="conteiner1">
     <p class="text1">Full Website</p>
     <p class="text2">
@@ -29,6 +31,9 @@
     <p class="botton"><a href="#">Today's Menu</a></p>
     <p class="imagen1"><img src="images/home.png"></p>
 </div>
+
+
+
 
 <div class="conteiner2">
   <p class="text1-2">About Us </p>
@@ -44,6 +49,20 @@
   <p class="botton2"><a href="#">Learn More</a></p>
   <p class="imagen2"><img src="images/about.png"></p>
 
+</div>
+
+<div class="conteiner3">
+  <p class="text1-3">Food Menu</p>
+  <p class="text2-3">Fresh taste and grant price</p>
+  <p class="imagen3"><img src="images/food1.png"></p>
+  <p class="imagen4"><img src="images/food2.png"></p>
+  <p class="imagen5"><img src="images/food3.png"></p>
+
+  <div class="cuadrado">
+    <p class="MiniText1">Chiken Burger</p>
+    <p class="MiniText2">Tasty Food</p>
+    <p class="MiniText3">$11.00</p>
+  </div>
 </div>
 </body>
 </html>
