--- a/Index.html
+++ b/Index.html
@@ -54,6 +54,11 @@
 <div class="conteiner3">
   <p class="text1-3">Food Menu</p>
   <p class="text2-3">Fresh taste and grant price</p>
+  <div class="cuadrado">
+    <p class="MiniText1">Chiken Burger</p>
+    <p class="MiniText2">Tasty Food</p>
+    <p class="MiniText3">$11.00</p>
+  </div>
   <p class="imagen3"><img src="images/food1.png"></p>
   <p class="imagen4"><img src="images/food2.png"></p>
   <p class="imagen5"><img src="images/food3.png"></p>
