--- a/Index.html
+++ b/Index.html
@@ -54,20 +54,35 @@
 <div class="conteiner3">
   <p class="text1-3">Food Menu</p>
   <p class="text2-3">Fresh taste and grant price</p>
-  <div class="cuadrado">
-    <p class="MiniText1">Chiken Burger</p>
-    <p class="MiniText2">Tasty Food</p>
-    <p class="MiniText3">$11.00</p>
-  </div>
-  <p class="imagen3"><img src="images/food1.png"></p>
-  <p class="imagen4"><img src="images/food2.png"></p>
-  <p class="imagen5"><img src="images/food3.png"></p>
 
-  <div class="cuadrado">
-    <p class="MiniText1">Chiken Burger</p>
-    <p class="MiniText2">Tasty Food</p>
-    <p class="MiniText3">$11.00</p>
+  <div class="intento">
+    <div class="cuadrado cuadrado-1">
+      <p class="imagen3"><img src="images/food1.png"></p>
+      <p class="MiniText1">Chiken Burger</p>
+      <p class="MiniText2">Tasty Food</p>
+      <p class="MiniText3">$11.00</p>
+    </div>
+
+    <div class="cuadrado cuadrado-2">
+      <p class="imagen4"><img src="images/food2.png"></p>
+      <p class="MiniText1">Special Beef Burger</p>
+      <p class="MiniText2">Tasty Food</p>
+      <p class="MiniText3">$11.00</p>
+    </div>
+
+    <div class="cuadrado cuadrado-3">
+      <p class="imagen5"><img src="images/food3.png"></p>
+      <p class="MiniText1">Chiken Fry Pack</p>
+      <p class="MiniText2">Tasty Food</p>
+      <p class="MiniText3">$11.00</p>
+    </div>
   </div>
+</div>
+
+<div class="conteiner4">
+  <p class="text1-4">Services</p>
+  <p class="text2-4">We provide best food services</p>
+
 </div>
 </body>
 </html>
