--- a/Index.html
+++ b/Index.html
@@ -14,75 +14,111 @@
     <i class="fa fa-bars"></i>
   </div>
   <ul class="nav-links">
-    <li class="nav-link"><a href="#">Home</a></li>
-    <li class="nav-link"><a href="#">About</a></li>
-    <li class="nav-link"><a href="#">Menu</a></li>
-    <li class="nav-link"><a href="#">Conact</a></li>
+    <li class="nav-link"><a href="#conteiner1">Home</a></li>
+    <li class="nav-link"><a href="#conteiner2">About</a></li>
+    <li class="nav-link"><a href="#conteiner3">Menu</a></li>
+    <li class="nav-link"><a href="#conteiner4">Service</a></li>
   </ul>
 </nav>
 
+<div id="conteiner1"></div>
+  <div class="conteiner1">
+      <p class="text1">Full Website</p>
+      <p class="text2">
+          Food the<br>
+          Most precious thing<br>
+      </p>
+      <p class="botton"><a href="#">Today's Menu</a></p>
+      <p class="imagen1"><img src="images/home.png"></p>
+  </div>
+</div>
 
-<div class="conteiner1">
-    <p class="text1">Full Website</p>
-    <p class="text2">
-        Food the<br>
-        Most precious thing<br>
+
+
+<div id="conteiner2">
+  <div class="conteiner2">
+    <p class="text1-2">About Us </p>
+    <p class="text2-2">
+      We speak the good <br>
+      food language
     </p>
-    <p class="botton"><a href="#">Today's Menu</a></p>
-    <p class="imagen1"><img src="images/home.png"></p>
+    <p class="text3-2">
+      It is a long established fact that a <br>
+      be distracted by the readable content <br>
+      looking at its layout. The point of
+    </p>
+    <p class="botton2"><a href="#">Learn More</a></p>
+    <p class="imagen2"><img src="images/about.png"></p>
+
+  </div>
 </div>
 
+<div id="conteiner3">
+  <div class="conteiner3">
+    <p class="text1-3">Food Menu</p>
+    <p class="text2-3">Fresh taste and grant price</p>
 
+    <div class="intento">
+      <div class="cuadrado cuadrado-1">
+        <p class="imagen3"><img src="images/food1.png"></p>
+        <p class="MiniText1">Chiken Burger</p>
+        <p class="MiniText2">Tasty Food</p>
+        <p class="MiniText3">$11.00</p>
+      </div>
 
+      <div class="cuadrado cuadrado-2">
+        <p class="imagen4"><img src="images/food2.png"></p>
+        <p class="MiniText1">Special Beef Burger</p>
+        <p class="MiniText2">Tasty Food</p>
+        <p class="MiniText3">$11.00</p>
+      </div>
 
-<div class="conteiner2">
-  <p class="text1-2">About Us </p>
-  <p class="text2-2">
-    We speak the good <br>
-    food language
-  </p>
-  <p class="text3-2">
-    It is a long established fact that a <br>
-    be distracted by the readable content <br>
-    looking at its layout. The point of
-  </p>
-  <p class="botton2"><a href="#">Learn More</a></p>
-  <p class="imagen2"><img src="images/about.png"></p>
-
-</div>
-
-<div class="conteiner3">
-  <p class="text1-3">Food Menu</p>
-  <p class="text2-3">Fresh taste and grant price</p>
-
-  <div class="intento">
-    <div class="cuadrado cuadrado-1">
-      <p class="imagen3"><img src="images/food1.png"></p>
-      <p class="MiniText1">Chiken Burger</p>
-      <p class="MiniText2">Tasty Food</p>
-      <p class="MiniText3">$11.00</p>
-    </div>
-
-    <div class="cuadrado cuadrado-2">
-      <p class="imagen4"><img src="images/food2.png"></p>
-      <p class="MiniText1">Special Beef Burger</p>
-      <p class="MiniText2">Tasty Food</p>
-      <p class="MiniText3">$11.00</p>
-    </div>
-
-    <div class="cuadrado cuadrado-3">
-      <p class="imagen5"><img src="images/food3.png"></p>
-      <p class="MiniText1">Chiken Fry Pack</p>
-      <p class="MiniText2">Tasty Food</p>
-      <p class="MiniText3">$11.00</p>
+      <div class="cuadrado cuadrado-3">
+        <p class="imagen5"><img src="images/food3.png"></p>
+        <p class="MiniText1">Chiken Fry Pack</p>
+        <p class="MiniText2">Tasty Food</p>
+        <p class="MiniText3">$11.00</p>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="conteiner4">
-  <p class="text1-4">Services</p>
-  <p class="text2-4">We provide best food services</p>
+<div id="conteiner4">
+  <div class="conteiner4">
+    <p class="text1-4">Services</p>
+    <p class="text2-4">We provide best food services</p>
 
+    <div class="espacio espacio-1">
+      <p class="imagen6"><img src="images/s1.png"></p>
+      <p class="ServiceText1">Order</p>
+      <p class="ServiceText2">
+        It is a long established<br>
+        be distracted by the readable<br>
+        looking at its layout.
+      </p>
+    </div>
+
+    <div class="espacio espacio-2">
+      <p class="imagen7"><img src="images/s2.png"></p>
+      <p class="ServiceText1">Shipping</p>
+      <p class="ServiceText2">
+        It is a long established<br>
+        be distracted by the readable<br>
+        looking at its layout.
+      </p>
+    </div>
+
+    <div class="espacio espacio-3">
+      <p class="imagen8"><img src="images/s3.png"></p>
+      <p class="ServiceText1">Dellvered</p>
+      <p class="ServiceText2">
+        It is a long established<br>
+        be distracted by the readable<br>
+        looking at its layout.
+      </p>
+    </div>  
+  </div>
 </div>
+
 </body>
 </html>
